# logos

./: .env.local.example  .gitignore  CLAUDE.md  README.md  deploy.sh
backend/: .dockerignore  .env.example  .env.local.example  CLAUDE.md  Dockerfile  Taskfile.yml  config.py  constants.py  database.py  db.py  docker-compose.yml  main.py  pyproject.toml  requirements.in  requirements.txt  s3.py  start.py
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/alembic/versions/: 3d3642175dac_add_metaphysics_category_to_philosophers.py  479f074bf17f_create_users_philosophers_chats_tables.py  (+3 more)
backend/controllers/: __init__.py  create_chat.py  create_philosopher.py  delete_chat.py  get_chat_by_id.py  get_chats.py  get_philosopher_by_id.py  get_philosopher_image.py  get_philosophers.py  prompt_advisor.py  prompt_philosopher.py  prompt_philosopher_legacy.py  sync_user.py  transcribe_audio.py
backend/dao/: __init__.py  base_dao.py  chat_dao.py  dao_factory.py  message_dao.py  philosopher_dao.py  philosopher_document_dao.py  rate_limit_log_dao.py  user_dao.py
backend/dependencies/: rate_limit.py
backend/middleware/: auth.py
backend/models/: __init__.py  chat.py  message.py  models.py  philosopher.py  philosopher_document.py  rate_limit_log.py  user.py
backend/routes/: __init__.py  chat.py  openai.py  philosophers.py  prompt.py  prompt_legacy.py  stats.py  users.py
backend/scripts/: ingest_documents.py  migrate_chat_content.py  seed.py
backend/services/: prompt_builder.py  retrieval_service.py  token_counter.py
frontend/: .env.local.example  (+7 more)
(+71 files in other folders)
