[project]
name = "logos-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "openai>=1.76.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "supabase>=2.15.1",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
