[project]
name = "who-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "openai>=1.76.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.11",
    "boto3>=1.42.68",
    "tiktoken>=0.12.0",
    "pgvector>=0.4.2",
    "python-jose[cryptography]>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
